<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/top_header">

        <EditTextPreference
            app:key="observer_name"
            app:title="@string/observer_name"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/modes"
            app:defaultValue="true"
            app:entries="@array/modes"
            app:entryValues="@array/mode_values"
            app:key="mode"
            app:title="@string/mode_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="1"
            android:inputType="number"
            app:dependency="mode"
            app:key="section_number"
            app:title="@string/section_number"
            app:useSimpleSummaryProvider="true" />



    </PreferenceCategory>

    <PreferenceCategory app:title="@string/trial_header">

        <SwitchPreferenceCompat
            app:key="manual_setup"
            app:title="@string/manual_setup" />

        <EditTextPreference
            app:dependency="manual_setup"
            app:key="trial_name"
            app:title="@string/trial_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="manual_setup"
            app:key="trialid"
            app:title="@string/trialid"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>