<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sectionPickerLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".activities.SectionPickerFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        >
    <Button
        android:id="@+id/decrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:onClick="decrement"
        android:text="@string/prev"
        android:textColor="@color/colorButtonBlue"
        android:textSize="32sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/sectionNumberLabel"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textColor="@color/colorButtonBlue"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/decrement"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:onClick="increment"
        android:text="@string/next"
        android:textAlignment="textStart"
        android:textColor="@color/colorButtonBlue"
        android:textSize="32sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sectionNumberLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>